# genai-agentos_LataMLOpS

./: .gitignore  README.md  docker-compose.yml
cli/agents/economic_impact_agent/: economic_impact_agent.py  pyproject.toml
cli/agents/modeling_agent/: model_LN.py  modeling_agent.py  pyproject.toml
master-agent/: main.py
master-agent/prompts/: prompts.py
mexican_oil_forecast_agents/: README.md  cloudera_mcp_data_collector.py  requirements.txt
