[project]
name = "economic_impact_agent"
version = "0.1.0"
description = "Economic impact agent for Mexican oil production analysis"
requires-python = ">=3.12"
dependencies = [
    "genai-protocol",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "pydantic==2.11.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "typing-extensions",
]